# openmm_deepmd_plugin

./: ._wordcount_selection.tex  .gitignore  CITATION.cff  CMakeLists.txt  README.md
.conda/: build.sh  conda_build_config.yaml  cuda_platform.patch  meta.yaml
.github/workflows/: ci.yml
build4docker_test/: CMakeCache.txt  CTestTestfile.cmake  Makefile  TestDeepmdPlugin4Reference  TestSerializeDeepmdForce  cmake_install.cmake
build4docker_test/python/: CTestTestfile.cmake  Makefile  cmake_install.cmake  setup.py
build4docker_test/python/OpenMMDeepmdPlugin/: __init__.py
build4docker_test/python/OpenMMDeepmdPlugin/tests/: test_dp_plugin_nve.py
build4docker_test/serialization/tests/: CTestTestfile.cmake  Makefile  cmake_install.cmake
openmmapi/include/: DeepmdForce.h  DeepmdKernels.h  Topology.h
openmmapi/include/internal/: DeepmdForceImpl.h  windowsExportDeepmd.h
openmmapi/src/: DeepmdForce.cpp  DeepmdForceImpl.cpp
python/: CMakeLists.txt  OpenMMDeepmdPlugin.i  log  setup.py
python/OpenMMDeepmdPlugin/: __init__.py  tools.py
python/OpenMMDeepmdPlugin/data/: .gitattributes  1aay.restraints_prot_pos  1aay.sysinfo  6zfv.crd  6zfv.psf  6zfv.restraints_prot_pos  6zfv.sysinfo  dp_mask_test_plugin.pb  toppar.str  water.pb
python/OpenMMDeepmdPlugin/tests/: test_dp_plugin_nve.py
python/OpenMMDeepmdPluginTools/: __init__.py  test_dp_plugin_nve.py  utils.py
python/examples/water_solvation_energy/: bar.py  water_solvation_free_energy.py
python/tests/: deepmd_dp.adaptive.region.py  test_deepmd_alchemical.py  test_deepmd_dp_adaptive_region.py  test_deepmd_dp_adaptive_region_6zfv.py  test_deepmd_dp_region.py  test_deepmd_multi_dp_adaptive_region.py  test_deepmd_npt.py  test_deepmd_nve.py  test_deepmd_nvt.py  test_model_differential.py  tests_deepmd_nve.py  utils.py
serialization/include/: DeepmdForceProxy.h
serialization/src/: DeepmdForceProxy.cpp  DeepmdSerializationProxyRegistration.cpp
serialization/tests/: CMakeLists.txt  TestSerializeDeepmdForce.cpp
tests/: analysis.py  check_plugin_energy_force.py  run_deepmd_alchemical.py  run_deepmd_simulation_npt.py  run_deepmd_simulation_nvt.py  test_deepmd_alchemical.py  test_deepmd_simulation.py  test_deepmd_simulation_npt.py  test_deepmd_simulation_nve.py  test_deepmd_simulation_nvt.py  test_plugin_energy_force.py  tests_deepmd_nve.py  utils.py
tests/frozen_model/: lw_pimd.v1.pb
tests/refer/: rdf_dp_gmx.csv  rdf_dp_lmp.csv  rdf_dp_omm.csv
